[tool.poetry]
name = "crous_menu"
version = "0.0.0"
description = "Script to fetch the CROUS menu for Barnave"
authors = ["Tom Cornebize <tom.cornebize@univ-grenoble-alpes.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.5"
requests = "^2.22"
beautifulsoup4 = "^4.8"
colorama = "^0.4.1"

[tool.poetry.dev-dependencies]
ipython = "^7.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
